--- a/app/views/expense_reports/show.html.slim
+++ b/app/views/expense_reports/show.html.slim
@@ -1,4 +1,7 @@
 #show_command
+  - if expense_report.report.status == :reported
+    = link_to t("common.link.posting"), new_posting_path(report: expense_report.target)
+    = " | "
   = link_to t("activerecord.models.#{expense_report.target_type.tableize.singularize}") + " 보기", expense_report.target
   = " | "
   = link_to t('common.link.edit'), [:edit, expense_report]
@@ -6,7 +9,6 @@
   = link_to t('common.link.destroy'), expense_report, :method => :delete, :confirm => "Are you sure?"
   = " | "
   = link_to t('common.title.back'), :expense_reports
-
 
 h2 지출내역서 상세정보
 
