--- a/app/views/expense_reports/show.html.slim
+++ b/app/views/expense_reports/show.html.slim
@@ -1,6 +1,9 @@
 #show_command
   - if expense_report.report.status == :reported
-    = link_to t("common.link.posting"), new_posting_path(report: expense_report)
+    - if expense_report.posting
+      = link_to t("postings.show.link"), expense_report.posting
+    - else
+      = link_to t("postings.new.link"), new_posting_path(report: expense_report)
     = " | "
   = link_to t("activerecord.models.#{expense_report.target_type.tableize.singularize}") + " 보기", expense_report.target
   = " | "
