--- a/app/views/postings/_form.html.slim
+++ b/app/views/postings/_form.html.slim
@@ -5,6 +5,7 @@ h2= t("common.title.#{action_name}")
 
 = form_for @posting, html: {class: "tabular"} do |f|
   = f.error_messages
+  = f.hidden_field :expense_report_id
   .box
     p
       = f.label :posted_at
@@ -16,8 +17,8 @@ h2= t("common.title.#{action_name}")
     h3 항목
     #posting-item-form
       #debit-form
-        = render 'posting_items/form', form: f, posting_items: posting.items.debits, type: "차변"
+        = render 'posting_items/form', form: f, posting_items: @posting.items, type: "차변"
       #credit-form
-        = render 'posting_items/form', form: f, posting_items: posting.items.credits, type: "대변"
+        = render 'posting_items/form', form: f, posting_items: @posting.items, type: "대변"
     p
       = f.submit
