--- a/app/views/payments/index.html.slim
+++ b/app/views/payments/index.html.slim
@@ -3,8 +3,11 @@
 
 h2= t('common.title.list')
 
-- from = Time.zone.now - 4.month
-- to = Time.zone.now + 3.month
+/ - from = Time.zone.now - 4.month
+/ - to = Time.zone.now + 3.month
+/ - @hrinfos = @hrinfos.payment_in?(from, to)
+- from = @from
+- to = @to
 
 table#list-table.payment-table
   tr
@@ -18,9 +21,9 @@ table#list-table.payment-table
 
     - @hrinfos.each do |hrinfo|
       - user = hrinfo.user
+      - period = Time.zone.parse("#{to.year}-#{to.month}-01 00:00:00")
       tr.selectable onclick="location.href='#{payment_path(user)}'"
         td=h hrinfo.fullname
-        - period = Time.zone.parse("#{to.year}-#{to.month}-01 00:00:00")
         - while from < period
           - td_class = (period.month == Time.zone.now.month ? :today : '')
           td.numrow[class=td_class]
