--- a/app/views/reports/_search_form.html.slim
+++ b/app/views/reports/_search_form.html.slim
@@ -1,1 +1,1 @@
-= select_tag :report_status, options_for_select(Report::STATUS_SELECT, params[:report_status] || :reporting_with_rollback), "onchange" => "this.form.submit()"
+= select_tag :report_status, options_for_select(Report::STATUS_SELECT, params[:report_status] || :default), "onchange" => "this.form.submit()"
