--- a/app/views/cardbills/index.html.erb
+++ b/app/views/cardbills/index.html.erb
@@ -11,9 +11,9 @@
   <% end -%>
 <% end -%>
 
-<div id="show_command">
+<!-- <div id="show_command">
 <%= link_to t('common.title.new'), new_cardbill_path %>
-</div>
+</div> -->
 
 <h2>Total : <%= @cardbills.count %></h2>
 <table id="list-table">
