--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -110,6 +110,8 @@ table tr td ul {
           <li><%= link_to t("permissions.title"), :controller => "permissions" %></li>
           <li><%= link_to t("change_histories.title"), :controller => "change_histories" %></li>
           <li><%= link_to t("holidays.title"), :controller => "holidays" %></li>
+          <li><%= link_to t("dayworkers.title"), :controller => "dayworkers" %></li>
+          <li><%= link_to t("dayworker_taxes.title"), :controller => "dayworker_taxes" %></li>
           <li><%= link_to t("companies.title"), current_company %></li>
         </ul>
       </td>
