--- a/app/views/creditcards/total.html.erb
+++ b/app/views/creditcards/total.html.erb
@@ -37,16 +37,16 @@
                   <td><%= card.cardholder %></td>
                   <td><%= card.cardno %></td>
                   <td><%= card.nickname %></td>
-                  <% used_sources = card.card_used_sources.where(approved_at: period.all_month) %>
-                  <td class="numrow"><%= number_to_currency used_sources.total_price %></td>
+                  <% approved_sources = card.card_approved_sources.where(will_be_paied_at: period.all_month) %>
+                  <td class="numrow"><%= number_to_currency approved_sources.total_price %></td>
                 </tr>
               <% end %>
               <tr style="background-color: yellow;">
                 <td><%= CardUsedSource.human_attribute_name(:total) %></td>
                 <td></td>
                 <td></td>
-                <% used_sources = CardUsedSource.where(approved_at: period.all_month) %>
-                <td class="numrow"><%= number_to_currency used_sources.total_price %></td>
+                <% approved_sources = CardApprovedSource.where(will_be_paied_at: period.all_month) %>
+                <td class="numrow"><%= number_to_currency approved_sources.total_price %></td>
               </tr>
             <tbody>
             </tbody>
