--- a/app/views/creditcards/total.html.erb
+++ b/app/views/creditcards/total.html.erb
@@ -12,7 +12,7 @@
 <table id="list-table">
   <thead>
     <tr>
-      <th>날짜</th>
+      <th>결제예정일</th>
       <th>카드내역</th>
     </tr>
   </thead>
@@ -37,7 +37,7 @@
                 <% Creditcard.all.each do |card| %>
                   <% total_price = card.card_approved_sources.by_date(period).total_price %>
                   <% unless total_price == 0 %>
-                    <tr>
+                  <tr class="selectable" onclick="location.href='<%= card_approved_sources_path(creditcard_id: card, will_be_paid_at: period) %>'">
                       <td><%= card.cardholder %></td>
                       <td><%= card.cardno %></td>
                       <td><%= card.nickname %></td>
