--- a/app/views/cardbills/show.html.erb
+++ b/app/views/cardbills/show.html.erb
@@ -34,6 +34,7 @@
 <%= render 'detail', target: @cardbill %>
 
 <%= render 'changelog', target: @cardbill %>
+<%= render 'accessors/info', access_target: @cardbill %>
 
 </div>
 <%= render "shared/attachments/detail", :target => @cardbill %>
