--- a/app/views/reports/_info.html.slim
+++ b/app/views/reports/_info.html.slim
@@ -42,8 +42,6 @@ p= "상태 - #{report.localize_status}"
         = ": "
         = comment.description
 
-h3 권한
-p= "쓰기: #{report.reporters.writers.map{|reporter| reporter.fullname}.join(', ')}"
-p= "읽기: #{report.reporters.readers.map{|reporter| reporter.fullname}.join(', ')}"
+= render 'accessors/info', access_target: report
 
 br
