--- a/app/views/commutes/show.html.slim
+++ b/app/views/commutes/show.html.slim
@@ -3,7 +3,7 @@
 #show_command
   = link_to t('commutes.new.link'), [:go, user, :commutes]
   - if @user.ingroup?(:admin)
-    = " | "
+    '  |
     = link_to t('common.title.list'), :commutes
 h2= t('.title')
 
@@ -12,25 +12,25 @@ h2= t('.title')
     - unless commutes_by_week.empty?
       table#list-table
         tr
-          - (0..6).each do |d|
-            th
-              /!= l (@start_day + d.day).to_date, format: :compact_long
-              = l (commutes_by_week[d].go + d.day).to_date, format: :compact_long unless commutes_by_week[d].nil?
+          - commutes_by_week.keys.sort.each do |d|
+            th= l d, format: :compact_long
         tr
-          - commutes_by_week.each do |commute|
-            td.selectable onclick="location.href='#{detail_user_commute_path(user,commute)}'" valign="top" align="center"
-              = t("commutes.arrive_at_work") + " : " + commute.go.strftime("%H:%M")
-              br
-              br
-              - if commute.attachments.count > 0
-                 = image_tag(url_for(:controller => "attachments", :action => 'picture', :id => commute.attachments[0].id, :w => "100", :h => "100"))
-              br
-              br
-              = t("commutes.leave_work") + " : " +  commute.leave.strftime("%H:%M") unless commute.leave.nil?
-              br
-              br
-              - if commute.attachments.count > 1
-                = image_tag(url_for(:controller => "attachments", :action => 'picture', :id => commute.attachments[1].id, :w => "100", :h => "100"))
+          - commutes_by_week.keys.sort.each do |d|
+            - commute = commutes_by_week[d]
+            - unless commute.nil?
+              td.selectable onclick="location.href='#{detail_user_commute_path(user,commute)}'" valign="top" align="center"
+                = t("commutes.arrive_at_work") + " : " + (l commute.go, format: :time)
+                br
+                br
+                = image_tag(url_for(:controller => "attachments", :action => 'picture', :id => commute.attachments[0].id, :w => "100", :h => "100")) if commute.attachments.count > 0
+                br
+                br
+                = t("commutes.leave_work") + " : " +  (l commute.leave, format: :time) unless commute.leave.nil?
+                br
+                br
+                = image_tag(url_for(:controller => "attachments", :action => 'picture', :id => commute.attachments[1].id, :w => "100", :h => "100")) if commute.attachments.count > 1
+            - else
+              td
       br
       br
       br
