--- a/app/views/commutes/index.html.slim
+++ b/app/views/commutes/index.html.slim
@@ -5,31 +5,45 @@
 
 h2= t('common.title.list')
 
-table#list-table
-  tr
-    th Name
-    - @beginning_day.to_date.step(@ending_day.to_date, 1.day).each do |day|
-      th= l day, format: :compact_long
-  - @commutes.keys.sort.each do |user_id|
-    - commutes_for_user = @commutes[user_id]
-    - user = User.find(user_id)
-    tr.selectable onclick="location.href='#{commute_path(user)}'"
-      td
-        nobr
-          = user.fullname
-      - commutes_for_user.keys.sort.each do |day|
-        - commute = commutes_for_user[day]
-        - unless commute.nil?
-          td valign="top"
-            = t("commutes.arrive_at_work") + " : " + (l commute.go, format: :time)
-            br
-            br
-            = image_tag(url_for(:controller => "attachments", :action => 'picture', :id => commute.attachments[0].id, :w => "100", :h => "100")) if commute.attachments.count > 0
-            br
-            br
-            = t("commutes.leave_work") + " : " +  (l commute.leave, format: :time) unless commute.leave.nil?
-            br
-            br
-            = image_tag(url_for(:controller => "attachments", :action => 'picture', :id => commute.attachments[1].id, :w => "100", :h => "100")) if commute.attachments.count > 1
-        - else
-          td
+- unless commutes_everyone.values.empty?
+  table#list-table
+    tr
+      th= Hrinfo.human_attribute_name("fullname")
+      /!- @beginning_day.to_date.step(@ending_day.to_date, 1.day).each do |day|
+      - commutes_everyone.values.first.keys.sort.first.to_date.step(commutes_everyone.values.first.keys.sort.last.to_date, 1.day).each do |day|
+        th= l day, format: :compact_long
+    - commutes_everyone.keys.sort.each do |user_id|
+      - commutes_for_user = commutes_everyone[user_id]
+      - user = User.find(user_id)
+      tr.selectable onclick="location.href='#{commute_path(user)}'"
+        td
+          nobr
+            = user.fullname
+        - commutes_for_user.keys.sort.each do |day|
+          - commute = commutes_for_user[day]
+          - unless commute.nil?
+            td valign="top"
+              = t("commutes.arrive_at_work") + " : " + (l commute.go, format: :time)
+              br
+              br
+              - if commute.attachments.count > 0
+                = image_tag(url_for(:controller => "attachments", :action => 'picture', :id => commute.attachments[0].id, :w => "100", :h => "100")) 
+              br
+              br
+              = t("commutes.leave_work") + " : " +  (l commute.leave, format: :time) unless commute.leave.nil?
+              br
+              br
+              - if commute.attachments.count > 1
+                = image_tag(url_for(:controller => "attachments", :action => 'picture', :id => commute.attachments[1].id, :w => "100", :h => "100")) 
+          - else
+            td
+br
+br
+br
+center
+  '  &laquo;
+  = link_to t(".prevweek"), commutes_path(page: (page+1))
+  - if page > 0
+    '  | 
+    = link_to t(".nextweek"), commutes_path(page: (page-1))
+    '  &raquo;
