--- a/app/views/commutes/index.html.slim
+++ b/app/views/commutes/index.html.slim
@@ -9,7 +9,6 @@ h2= t('common.title.list')
   table#list-table
     tr
       th= Hrinfo.human_attribute_name("fullname")
-      /!- @beginning_day.to_date.step(@ending_day.to_date, 1.day).each do |day|
       - commutes_everyone.values.first.keys.sort.first.to_date.step(commutes_everyone.values.first.keys.sort.last.to_date, 1.day).each do |day|
         th= l day, format: :compact_long
     - commutes_everyone.keys.sort.each do |user_id|
@@ -26,15 +25,13 @@ h2= t('common.title.list')
               = t("commutes.arrive_at_work") + " : " + (l commute.go, format: :time)
               br
               br
-              - if commute.attachments.count > 0
-                = image_tag(url_for(:controller => "attachments", :action => 'picture', :id => commute.attachments[0].id, :w => "100", :h => "100")) 
+              = image_tag tiny_picture_path(commute.attachments[0]) if commute.attachments.count > 0
               br
               br
               = t("commutes.leave_work") + " : " +  (l commute.leave, format: :time) unless commute.leave.nil?
               br
               br
-              - if commute.attachments.count > 1
-                = image_tag(url_for(:controller => "attachments", :action => 'picture', :id => commute.attachments[1].id, :w => "100", :h => "100")) 
+              = image_tag tiny_picture_path(commute.attachments[1]) if commute.attachments.count > 1
           - else
             td
 br
