--- a/app/views/card_approved_sources/index.html.slim
+++ b/app/views/card_approved_sources/index.html.slim
@@ -10,7 +10,7 @@
 #show_command
   = link_to t('card_approved_sources.find_empty_cardbills.link'), [:find_empty_cardbills, :card_approved_sources]
   = " | "
-  = link_to t('card_approved_sources.generate_cardbills.link'), [:generate_cardbills, :card_approved_sources], method: :post
+  = link_to t('card_approved_sources.generate.link'), [:generate_cardbills, :card_approved_sources]
   = " | "
   = link_to t('card_approved_sources.new.link'), [:new, :card_approved_source]
   = " | "
