connect tags of contact to company

--- a/app/views/contacts/form/_others.html.slim
+++ b/app/views/contacts/form/_others.html.slim
@@ -5,7 +5,7 @@ h3 기타
   .other-form
     p
       = others_field.label :target
-      = others_field.select :target, options_for_select(ContactOtherTag.all.map{|tag| tag.name}, others_field.object.target)
+      = others_field.select :target, options_for_select(current_company.contact_other_tags.map{|tag| tag.name}, others_field.object.target)
       = link_to "새로운 대상 만들기", [:new, :contact_other_tag]
     p
       = others_field.label :description
