--- a/app/views/contacts/form/_phone_number.html.slim
+++ b/app/views/contacts/form/_phone_number.html.slim
@@ -5,7 +5,7 @@ h3 전화번호
   .phone-number-form
     p
       = phone_number_field.label :target
-      = phone_number_field.select :target, options_for_select(ContactPhoneNumberTag.all.map{|tag| tag.name}, phone_number_field.object.target)
+      = phone_number_field.select :target, options_for_select(current_company.contact_phone_number_tags.map{|tag| tag.name}, phone_number_field.object.target)
       = link_to "새로운 대상 만들기", [:new, :contact_phone_number_tag]
     p
       = phone_number_field.label :number
