--- a/app/views/contacts/form/_email.html.slim
+++ b/app/views/contacts/form/_email.html.slim
@@ -5,7 +5,7 @@ h3 이메일
   .email-form
     p
       = email_field.label :target
-      = email_field.select :target, options_for_select(ContactEmailTag.all.map{|tag| tag.name}, email_field.object.target)
+      = email_field.select :target, options_for_select(current_company.contact_email_tags.map{|tag| tag.name}, email_field.object.target)
       = link_to "새로운 대상 만들기", [:new, :contact_email_tag]
 
     p
