--- a/app/views/creditcards/total.html.erb
+++ b/app/views/creditcards/total.html.erb
@@ -37,7 +37,7 @@
                 <% Creditcard.all.each do |card| %>
                   <% total_price = card.card_approved_sources.no_canceled.by_date(period).total_price %>
                   <% unless total_price == 0 %>
-                  <tr class="selectable" onclick="location.href='<%= card_approved_sources_path(creditcard_id: card, will_be_paid_at: period) %>'">
+                  <tr class="selectable" onclick="location.href='<%= card_approved_sources_path(creditcard_id: card, will_be_paid_at: period, no_canceled: true) %>'">
                       <td><%= card.cardholder %></td>
                       <td><%= card.cardno %></td>
                       <td><%= card.nickname %></td>
