--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -12,6 +12,8 @@
   = " | "
   = link_to t('bank_transactions.excel.link'), [:excel, :bank_transactions]
   = " | "
+  = link_to t('bank_transactions.excel.export'), export_bank_transactions_path(bank_account_id: params[:bank_account_id]), method: :post
+  = " | "
   = link_to t('common.title.back'), :bank_accounts
 
 h2
