--- a/app/views/card_used_sources/index.html.slim
+++ b/app/views/card_used_sources/index.html.slim
@@ -10,6 +10,8 @@
 #show_command
   = link_to t('card_used_sources.new.link'), [:new, :card_used_source]
   = " | "
+  = link_to t('card_used_sources.export.link'), export_card_used_sources_path(creditcard_id: params[:creditcard_id]), method: :post
+  = " | "
   = link_to t('common.title.back'), :creditcards
 
 h2
