--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -11,6 +11,8 @@ table tr td ul {
   line-height: 150%;
 }
 </style>
+<%= render partial: "main_menu" %>
+
 <table align="center" border="0" cellspacing="5" cellpadding="5" id="menumenu-table" style="margin-top: 80px; font-size: 16px">
   <tr style="background-color:lightgray;">
     <th style="text-align: center;"><%= t(".human_resources") %></th>
