--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,8 +1,13 @@
 #logo{
-	text-align: center;
+  text-align: center;
 
-	img {
-		margin-left: 10px;
-		margin-top: 50px;
-	}
+  img {
+    margin-left: 10px;
+    margin-top: 50px;
+  }
+}
+
+#export-menu {
+  margin: 10px;
+  text-align: right;
 }
