--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -12,8 +12,6 @@
   = " | "
   = link_to t('bank_transactions.excel.link'), [:excel, :bank_transactions]
   = " | "
-  = link_to t('bank_transactions.excel.export'), export_bank_transactions_path(bank_account_id: params[:bank_account_id]), method: :post
-  = " | "
   = link_to t('common.title.back'), :bank_accounts
 
 h2
@@ -28,5 +26,9 @@ h2
   br
   center
     = will_paginate @bank_transactions
+  #export-menu
+    = link_to t('bank_transactions.export.excel'), export_bank_transactions_path(bank_account_id: params[:bank_account_id], to: :xls), method: :post
+    = " | "
+    = link_to t('bank_transactions.export.pdf'), export_bank_transactions_path(bank_account_id: params[:bank_account_id], to: :pdf), method: :post
 - else
   h4= t('.empty')
