--- a/app/views/card_used_sources/index.html.slim
+++ b/app/views/card_used_sources/index.html.slim
@@ -10,8 +10,6 @@
 #show_command
   = link_to t('card_used_sources.new.link'), [:new, :card_used_source]
   = " | "
-  = link_to t('card_used_sources.export.link'), export_card_used_sources_path(creditcard_id: params[:creditcard_id]), method: :post
-  = " | "
   = link_to t('common.title.back'), :creditcards
 
 h2
@@ -26,5 +24,9 @@ h2
   br
   center
     = will_paginate @card_used_sources
+  #export-menu
+    = link_to t('card_used_sources.export.xls'), export_card_used_sources_path(creditcard_id: params[:creditcard_id], to: :xls), method: :post
+    = " | "
+    = link_to t('card_used_sources.export.pdf'), export_card_used_sources_path(creditcard_id: params[:creditcard_id], to: :pdf), method: :post
 - else
   h4= t('.empty')
