--- a/app/views/card_used_sources/index.html.slim
+++ b/app/views/card_used_sources/index.html.slim
@@ -25,6 +25,7 @@ h2
   center
     = will_paginate @card_used_sources
   #export-menu
+    = t('common.export') + " : "
     = link_to t('card_used_sources.export.excel'), export_card_used_sources_path(creditcard_id: params[:creditcard_id], to: :xls), method: :post
     = " | "
     = link_to t('card_used_sources.export.pdf'), export_card_used_sources_path(creditcard_id: params[:creditcard_id], to: :pdf), method: :post
