--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -15,8 +15,8 @@
   = link_to t('common.title.back'), :bank_accounts
 
 h2
-  - if @bank_account
-    = "#{@bank_account.name}: #{@bank_account.number}"
+  - if bank_account
+    = "#{bank_account.name_with_number}"
   - else
     = "은행 거래내역"
 
