--- a/app/views/bank_transfers/index.html.slim
+++ b/app/views/bank_transfers/index.html.slim
@@ -13,7 +13,7 @@
 
 h2
   - if bank_account
-    = "#{bank_account.name}: #{bank_account.number}"
+    = "#{bank_account.name_with_number}"
   - else
     = "은행 이체내역"
 
