--- a/app/views/main/_this_week.html.slim
+++ b/app/views/main/_this_week.html.slim
@@ -6,15 +6,15 @@ table#list-table
     - @start_day.to_date.step(@end_day.to_date, 1.day).each do |day|
       - holidays = @holidays.select { |h| h.theday.to_date == day }
       - if ! holidays.empty? || day.saturday? || day.sunday?
-        td style="background-color: PaleVioletRed;"
+        td style="background-color: PaleVioletRed;" valign="top"
           - holidays.each do |h|
-            = h.dayname
+            p= h.dayname
       - else
-        td
+        td valign="top"
           - today_v = @vacations.select {|v| v.in? day}
           - unless today_v.empty?
             - today_v.each do |tv|
-              = t("used_vacations.vacation") + tv.vacation.user.fullname
+              p= t("used_vacations.vacation") + tv.vacation.user.fullname
 br
 br
 br
