--- a/app/views/expense_reports/show.html.slim
+++ b/app/views/expense_reports/show.html.slim
@@ -7,10 +7,11 @@
     = " | "
   = link_to t("activerecord.models.#{expense_report.target_type.tableize.singularize}") + " 보기", expense_report.target
   = " | "
-  = link_to t('common.link.edit'), [:edit, expense_report]
-  = " | "
-  = link_to t('common.link.destroy'), expense_report, :method => :delete, :confirm => "Are you sure?"
-  = " | "
+  - unless expense_report.posting
+    = link_to t('common.link.edit'), [:edit, expense_report]
+    = " | "
+    = link_to t('common.link.destroy'), expense_report, :method => :delete, :confirm => "Are  you sure?"
+    = " | "
   = link_to t('common.title.back'), :expense_reports
 
 h2 지출내역서 상세정보
