--- a/app/views/postings/show.html.slim
+++ b/app/views/postings/show.html.slim
@@ -1,4 +1,8 @@
 #show_command
+  = link_to t('common.title.edit'), [:edit, posting]
+  = " | "
+  = link_to t('common.title.destroy'), posting, method: :delete, confirm: "Are you sure?"
+  = " | "
   = link_to t('common.title.list'), :postings
 
 h2= t('.title')
