--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -28,8 +28,8 @@ h2
     = will_paginate @bank_transactions
   #export-menu
     = t('common.export') + " : "
-    = link_to t('bank_transactions.export.excel'), export_bank_transactions_path(bank_account_id: params[:bank_account_id], to: :xls), method: :post
+    = link_to t('bank_transactions.export.excel'), export_bank_transactions_path(forward_params.merge(to: :xls)), method: :post
     = " | "
-    = link_to t('bank_transactions.export.pdf'), export_bank_transactions_path(bank_account_id: params[:bank_account_id], to: :pdf), method: :post
+    = link_to t('bank_transactions.export.pdf'), export_bank_transactions_path(forward_params.merge(to: :pdf)), method: :post
 - else
   h4= t('.empty')
