--- a/app/views/card_approved_sources/index.html.slim
+++ b/app/views/card_approved_sources/index.html.slim
@@ -30,9 +30,9 @@ h2
     = will_paginate @card_approved_sources
   #export-menu
     = t('common.export') + " : "
-    = link_to t('card_approved_sources.export.excel'), export_card_approved_sources_path(creditcard_id: params[:creditcard_id], to: :xls), method: :post
+    = link_to t('card_approved_sources.export.excel'), export_card_approved_sources_path(forward_params.merge(to: :xls)), method: :post
     = " | "
-    = link_to t('card_approved_sources.export.pdf'), export_card_approved_sources_path(creditcard_id: params[:creditcard_id], to: :pdf), method: :post
+    = link_to t('card_approved_sources.export.pdf'), export_card_approved_sources_path(forward_params.merge(to: :pdf)), method: :post
 
 - else
   h4= t('.empty')
