--- a/app/views/main/_main_menu.html.slim
+++ b/app/views/main/_main_menu.html.slim
@@ -62,6 +62,8 @@ table align="center" border="0" cellspacing="5" cellpadding="5"  style="margin-t
           = link_to t("payments.title"), :payments
           '  /
           = link_to t("users.index.title"), :controller => "users"
+          '  /
+          = link_to t("groups.title"), :controller => "groups"
         p
           = link_to t("payroll_categories.title"), :controller => "payroll_categories"
           '  /
