--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -9,9 +9,10 @@
 <div id="show_command">
   <%= link_to t('documents.new.title'), new_document_path %>
 </div>
-<h2><%= t("common.title.total") %>: <%= @documents.count %></h2>
+<h2><%= t("common.title.total") %>: <%= @documents.length %></h2>
 <table id="list-table">
   <tr>
+    <th><%= Document.human_attribute_name("id") %></th>
     <th><%= Document.human_attribute_name("title") %></th>
     <th><%= Document.human_attribute_name("project") %></th>
     <th><%= Document.human_attribute_name("owner") %></th>
@@ -20,6 +21,7 @@
   </tr>
 <% @documents.each do |document| %>
   <tr class="selectable" onclick="location.href='<%= document_path(document) %>'">
+    <td><%=h document.id %></td>
     <td><%=h document.title %></td>
     <td><%=h document.project_name  %></td>
     <td>
@@ -32,7 +34,7 @@
     <td>
       <%=h document.tag_list %>
     </td>
-    <td><%=h document.report.localize_status %></td>
+    <td><%=h document.localize_status %></td>
   </tr>
 <% end %>
 </table>
