--- a/app/views/reports/_info.html.slim
+++ b/app/views/reports/_info.html.slim
@@ -1,3 +1,4 @@
+- target.create_if_no_report
 - report = target.report
 
 h3 결제
@@ -17,7 +18,8 @@ p= "상태 - #{report.localize_status}"
       p
         - if report.rollback?
           = submit_tag "반려"
-        = submit_tag "상신"
+        - if report.report?
+          = submit_tag "상신"
   - else
     = form_tag :report do
       = hidden_field_tag :target_type, target.class
