modify total count of expense report

--- a/app/views/expense_reports/index.html.slim
+++ b/app/views/expense_reports/index.html.slim
@@ -10,7 +10,7 @@
 #show_command
   = link_to t('common.title.back'), :root
 
-h2 Total : #{@expenses.count}
+h2 Total : #{@expenses.length}
 
 - unless @expenses.empty?
   table#list-table
