--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -11,6 +11,18 @@ h2 회사 정보
       th= company.class.human_attribute_name(:name)
       td= company.name
     tr
+      th= company.class.human_attribute_name(:registration_number)
+      td= company.registration_number
+    tr
+      th= company.class.human_attribute_name(:owner_name)
+      td= company.owner_name
+    tr
+      th= company.class.human_attribute_name(:address)
+      td= company.address
+    tr
+      th= company.class.human_attribute_name(:phone_number)
+      td= company.phone_number
+    tr
       th= company.class.human_attribute_name(:pay_basic_date)
       td= company.pay_basic_date
     tr
