--- a/app/views/hrinfos/new.html.erb
+++ b/app/views/hrinfos/new.html.erb
@@ -40,6 +40,10 @@
     <%= f.text_field :address %>
   </p>
   <p>
+    <%= f.label :department, Hrinfo.human_attribute_name('department') %>
+    <%= f.text_field :department %>
+  </p>
+  <p>
     <%= f.label :position, Hrinfo.human_attribute_name('position')%>
     <%= f.text_field :position %>
   </p>
