--- a/app/views/companies/_form.html.slim
+++ b/app/views/companies/_form.html.slim
@@ -27,4 +27,6 @@ h2= t("common.title.#{action_name}")
       = f.label :payday
       = f.select :payday, (1..31)
     p
+      = render 'shared/attachments/form', form: f
+    p
       = f.submit
